--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/AmitMizrahi123/Cost-Manager-REStful-Web-Services#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "passport-local-mongoose": "^7.0.0"
   }
 }
