--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "homepage": "https://github.com/AmitMizrahi123/Cost-Manager-REStful-Web-Services#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
-    "passport-local-mongoose": "^7.0.0"
+    "passport-local-mongoose": "^7.0.0",
+    "uuid": "^8.3.2"
   }
 }
